wacom: restore OLED handling on Intuos4 tablets

This patch restores OLED handling that was broken by recent button
mapping changes.

https://bugzilla.gnome.org/show_bug.cgi?id=705943